Fixed the overflow caused by navbar

--- a/styles/nav.module.css
+++ b/styles/nav.module.css
@@ -2,7 +2,7 @@
   position: absolute;
   top: 0;
   transition: all 300ms ease-in-out;
-  right: -100%;
+  left: 0;
   width: 100%;
   height: 100vh;
   z-index: 2;
